Update 'backend-tests-go-itzujqjq' component image to: quay.io/rhtap_qe/backend-tests-go-itzujqjq:dff2faabc704eedd6b92f0134256c85f5ead69fb@sha256:b2e803937854c8e5e165516d59291e92043cc894f0a230d254cd6d6e735b81ea

--- a/components/backend-tests-go-itzujqjq/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-go-itzujqjq/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-go-itzujqjq
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-go-itzujqjq:dff2faabc704eedd6b92f0134256c85f5ead69fb@sha256:b2e803937854c8e5e165516d59291e92043cc894f0a230d254cd6d6e735b81ea
+          name: container-image
